--- a/mylib/CMakeLists.txt
+++ b/mylib/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_library(mylib PCA.cpp FSUtils.cpp Subspace.cpp ImageManipUtil.cpp Patch.cpp)
+add_library(mylib PCA.cpp FSUtils.cpp Subspace.cpp ImageManipUtil.cpp Patch.cpp NN_Utils.cpp)
